2008-10-29  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: plugins/Makefile.in, cgi/Makefile.in, src/Makefile.in
	  Now do not make $(localstatedir) and so on.  These are needed when Kahua run on
	  old fashion working directory.

	* Change: src/kahua/config.scm.in, test/config.scm, configure.ac
	  Now Kahua run on any site bundle only, so drop obsolete code and configure options. 
	  Add cgilogs to default site bundle for CGI logging.  So now default value of
	  --with-cgilogdir is "cgilogs", it's under site-root.

2008-10-28  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/Makefile.in
	  Remove: src/user.conf.sample, src/kahua.conf.sample
	  Now do not install the global configuration file and developer acount database.

	* Change: src/kahua-spvr.scm, src/kahua-httpd.scm,
	          src/kahua-keyserv.scm, src/kahua-server.scm
	  Now child processes check spvr is alive or not via pipe,
	  and kill themselves if spvr has gone.

2008-10-25  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: test/Makefile.in
	  Suppress Boehm-gc's warning message.

2008-10-24  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/config.scm.in, test/config.scm, test/session.scm
	  Drop procedure "kahua-init" because Kahua cannot work without any site bundle.
	  You must use kahua-common-init instead of kahua-init.

	* Change: src/kahua/config.scm.in, src/Makefile.in
	          test/sandbox.scm, test/config.scm, test/kahua-call-with-current-context.scm,
	          test/lambdabooks.scm, test/foldlist.scm, test/redirectcont.scm,
	          test/developer.scm, test/nqueen.scm, test/plugin.scm, test/query.scm,
	          test/server.scm, test/shell.scm, test/worker.scm, test/wiki-iki.scm,
	          test/entry-method.scm, test/httpd.scm, test/admin.scm, test/rollback.scm,
	          test/spvr.scm, test/multi-paging.scm, test/dead-lock.scm
	  Remove: src/make-testconf.scm, src/custom.conf.sample
	  <kahua-config> is now based on <kahua:object-pool-mixin> and <kahua:read-only-mixin>,